packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/undefined_alias.mmd
---
title: Undefined Alias Error
---

# Define one alias
@alias valid_alias pc.{ch}.{preset}

# Try to call an undefined alias
[00:00.000]
- undefined_alias 1 5

# This should cause an error during event generation
